src/app/components/project-list/project/project.component.scss
.project {
  display: flex;
  justify-content: center;
  align-items: center;
  //min-height: 70vh;
  margin: 50px 0;

  @media (max-width: 768px) {
    flex-direction: column;
    margin: 150px auto;
  }

  .details {
    width: 50%;
    padding: 100px 50px;
    border: 1px solid rgba(0, 0, 0, 0.16);
    border-right: none;
    margin-right: 50px;

    .title {
      margin-bottom: 15px;
      text-transform: uppercase;
    }

    @media (min-width: 768.1px) {
      &.flipped {
        order: 2;
        border: 1px solid rgba(0, 0, 0, 0.16);
        border-left: none;
        margin-left: 50px;
        margin-right: 0;
      }
    }

    @media (max-width: 768px) {
      //order: 2;
      width: 100%;
      border: 1px solid rgba(0, 0, 0, 0.16);
      border-bottom: none;
      margin-bottom: -20px;
      margin-left: 0px;
      margin-right: 0;
    }
  }

  .card {
    border: 1px solid rgba(0, 0, 0, 0.16);
    width: 45%;
    max-width: 500px;
    display: flex;
    flex-direction: column;

    img {
      width: 100%;
      //height: 70%;
      min-height: 300px;
      object-fit: cover;
    }

    @media (max-width: 768px) {
      width: 80%;
    }

    .card-content {
      padding: 30px 15px 0 15px;
        text-transform: uppercase;

      .tech-used {
        font-size: 14px;
        font-weight: bold;
      }

      ul {
        display: flex;
        flex-wrap: wrap;
        justify-content: flex-start;
      }
      li {
        list-style: none;
        padding: 15px 15px 0 0;
        font-size: 14px;
      }

      .buttons {
        max-width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-around;
        padding: 20px 0 0 0 ;
        margin: 10px 0 20px 0;
        li {
          list-style: none;
          width: 100%;
          &:last-child{
            padding-bottom: 0;
          }
        }
      }

      .button {
        width: 100%;

        &:not(:last-child) {
          margin-bottom: 10px;
        }
      }

    }

  }


}

